# Lcom

./: README.md
1bit2out/: L1bit.cu  README.md  Smax_Matlab.m  Smax_Octave.m  opt_Octave.m
1bit2out/Examples/: E1bit_63.txt  E1bit_90.txt  P63.txt  P90.txt  Readme.md  S63_0.txt  S63_1.txt  S90_0.txt  S90_1.txt  W63.txt  W90.txt  check.m  oneBit.gnu  strategies_63.m  strategies_90.m
generic/: CHANGELOG.md  LICENSE  README.md  lkbit.cabal
generic/app/: Main.hs
generic/arXiv_examples/: README.txt  cglmp2_10.mat  chsh.mat  chsh3.mat  magic.mat  magic2.mat  magic2_a.mat  magic2_s.mat
generic/matrices/: chsh.mat  pironio3.mat  pironio4.mat
