cabal-version:      3.0
name:               lkbit
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            1.0.0.0

synopsis: Generalized K_m,n quadratic optimization.

homepage:           https://github.com/istvanmarton/Lcom
license:            BSD-3-Clause
license-file:       LICENSE
author:             Peter Divianszky
maintainer:         peter.divianszky@faulhornlabs.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable lkbit
    hs-source-dirs:   app
    main-is:          Main.hs

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -O2
    build-depends:    base
                    , monad-par
                    , abstract-par
                    , vector
                    , optparse-applicative
